--- a/README
+++ b/README
@@ -6,6 +6,7 @@ SYNOPSIS
         > cd MySlides       # Go In There
         > vim slides.vroom  # Write Some Slides
         > vroom --vroom     # Show Your Slides
+        > vroom --html      # Publis Your Slides as HTML
 
 DESCRIPTION
     Ever given a Slide Show and needed to switch over to the shell?
@@ -135,7 +136,7 @@ KEY MAPPINGS
     <BACKSPACE>
         Go back one slide.
 
-    <R> Run current slide as Perl.
+    <R> Run current slide as Perl. Turn a YAML slide into Data::Dumper Perl.
 
     <Q> Quit Vroom.
 
@@ -160,7 +161,7 @@ AUTHOR
     Ingy döt Net <ingy@cpan.org>
 
 COPYRIGHT
-    Copyright (c) 2008. Ingy döt Net.
+    Copyright (c) 2008, 2009. Ingy döt Net.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
