--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.21
+date:    Sat Apr 10 11:02:45 PDT 2010
+changes:
+- 0.20 botched getting to CPAN
+---
 version: 0.20
 date:    Thu Apr  8 16:22:55 PDT 2010
 changes:
