--- a/README
+++ b/README
@@ -304,10 +304,10 @@ GITHUB NOTES
     gh-pages at <http://ingydotnet.github.com/vroom-pm/>.
 
 AUTHOR
-    Ingy döt Net <ingy@cpan.org>
+    Ingy dÃ¶t Net <ingy@cpan.org>
 
 COPYRIGHT
-    Copyright (c) 2008, 2009. Ingy döt Net.
+    Copyright (c) 2008, 2009. Ingy dÃ¶t Net.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
