--- a/README
+++ b/README
@@ -94,6 +94,7 @@ INPUT FORMAT
         height: 84
         width: 20
         # skip: 12      # Skip 12 slides. Useful when making slides.
+        # auto_size: 1  # Determines height/width automatically
         ---- center
         My Presentation
 
@@ -181,6 +182,10 @@ CONFIGURATION OPTIONS
     width: <number>
         The number of columns in the terminal you plan to use when
         presenting the show. Used for centering the content.
+
+    auto_size: <0|1>
+        When set to 1, the height/width options above will be ignored and
+        determined each time you start the slideshow.
 
     indent: <number>
         All slides will be indented by this number of spaces by default.
@@ -304,10 +309,10 @@ GITHUB NOTES
     gh-pages at <http://ingydotnet.github.com/vroom-pm/>.
 
 AUTHOR
-    Ingy döt Net <ingy@cpan.org>
+    Ingy döt Net <ingy@ingy.net>
 
-COPYRIGHT
-    Copyright (c) 2008, 2009. Ingy döt Net.
+COPYRIGHT AND LICENSE
+    Copyright (c) 2008, 2009, 2010, 2011. Ingy döt Net.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
