--- a/README
+++ b/README
@@ -312,7 +312,7 @@ AUTHOR
     Ingy döt Net <ingy@ingy.net>
 
 COPYRIGHT AND LICENSE
-    Copyright (c) 2008, 2009, 2010, 2011. Ingy döt Net.
+    Copyright (c) 2008-2012. Ingy döt Net.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
