--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.36
+date:    Sat Aug 16 12:52:50 PDT 2014
+changes:
+- Meta 0.0.2
+---
 version: 0.35
 date:    Fri Aug 15 21:00:48 PDT 2014
 changes:
