--- a/ReadMe.pod
+++ b/ReadMe.pod
@@ -187,10 +187,15 @@ characters from the contents of the slide. This can be useful if you need to
 have characters special to Vroom at the beginning of your lines, for example
 if the contents of your slide is unified diff output.
 
-=item perl,ruby,python,php,javascript,haskell,actionscript,html,yaml,xml,json,make,shell,diff
+=item C<perl,ruby,python,php,javascript,haskell,actionscript,html,yaml,xml,json,make,shell,diff>
 
 Specifies that the slide is one of those syntaxen, and that the appropriate
 file extension will be used, thus causing vim to syntax highlight the slide.
+
+=item `.<ext>
+
+You can specify any extension by putting a period in front of it. Like C<.md>
+for MarkDown.
 
 =item include file-path-name
 
