--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.37
+date:    Mon Sep  8 16:40:13 PDT 2014
+changes:
+- All any extension. Fixes issue/14.
+---
 version: 0.36
 date:    Sat Aug 16 12:52:50 PDT 2014
 changes:
